fix device badges text overflow, fix contacts photo being resized, improve contacts layout

--- a/facility/client/static/css/style.css
+++ b/facility/client/static/css/style.css
@@ -97,6 +97,12 @@ body {
     height: auto;
 }
 
+.device-tag {
+    text-align: left;
+    white-space: normal;
+    margin-top: 0.5em;
+}
+
 @media (max-width: 768px) {
     body {
         font-size: 16px;
